--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A simple web app that keeps track of the user's in-game coordinates.",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon ./api",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "server": "nodemon server.js --prefix api",
+    "client": "npm start --prefix client",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,6 +20,8 @@
   },
   "homepage": "https://github.com/Thomas-Fortier/coordinate-tracker#readme",
   "dependencies": {
+    "axios": "^0.21.1",
+    "concurrently": "^6.2.1",
     "dotenv": "^10.0.0",
     "nodemon": "^2.0.12"
   }
