--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node server.js --prefix api",
     "server": "nodemon server.js --prefix api",
     "client": "npm start --prefix client",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm i --prefix client && npm run build --prefix client",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm i --prefix client && npm run build --prefix client && npm i --prefix api",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
