--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/Thomas-Fortier/coordinate-tracker#readme",
   "dependencies": {
     "axios": "^0.21.1",
+    "bootstrap": "^5.1.0",
     "concurrently": "^6.2.1",
     "dotenv": "^10.0.0",
     "nodemon": "^2.0.12"
